<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/name"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/price"/>

        <EditText
            android:id="@+id/price"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quantity"/>

        <Button
            android:id="@+id/button_q_minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_minus"/>

        <TextView
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:id="@+id/quantity"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="0"/>

        <Button
            android:id="@+id/button_q_plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_plus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/supplier_name"/>

        <EditText
            android:id="@+id/supplier_name"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/supplier_no"/>

        <EditText
            android:id="@+id/supplier_no"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_no"
            android:inputType="phone"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/button_order"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_order"/>
</LinearLayout>
